@@ -47,6 +47,13 @@ Core and Builtins
 Library
 -------
 
+- Issue #7610: Reworked implementation of the internal
+  :class:`zipfile.ZipExtFile` class used to represent files stored inside
+  an archive.  The new implementation is significantly faster and can
+  be wrapped in a :class:`io.BufferedReader` object for more speedups.
+  It also solves an issue where interleaved calls to `read()` and
+  `readline()` give wrong results.  Patch by Nir Aides.
+
 - Issue #7792: Registering non-classes to ABCs raised an obscure error.
 
 - Removed the functions 'verify' and 'vereq' from Lib/test/test_support.py.
